@startuml DataModelClassDiagram

hide circle
skinparam classAttributeIconSize 0

class SemesterBook {
    -currentSemesterName: String
    +getCurrentSemester(): Semester
    +getCurrentModuleBook(): ModuleBook
    +switchOrCreate(): boolean
    +isCurrentSemesterReadOnly(): boolean
    +archiveCurrentSemester(): void
    +getAllSemesters(): Collection<Semester>
}

class Semester {
    -name: String
    -archived: boolean
    +getName(): String
    +getModuleBook(): ModuleBook
    +isArchived(): boolean
    +setArchived(): void
}

class ModuleBook {
    +getOrCreate(): Module
    +getModule(): Module
    +getModules(): Collection<Module>
    +getTaskByDisplayIndex(): Task
    +removeTaskByDisplayIndex(): Task
    +countTotalTasks(): int
}

class Module {
    -code: String
    -grade: String
    -credits: int
    -archived: boolean
    +getCode(): String
    +getTasks(): TaskList
    +getGrade(): String
    +setGrade(): void
    +getCredits(): int
    +setCredits(): void
}

class TaskList {
    +addTodo(): Task
    +addDeadline(): Task
    +asUnmodifiableList(): List<Task>
    +removeTask(): Task
    +size(): int
}

abstract class Task {
    -moduleCode: String
    -description: String
    -isDone: boolean
    -weightage: Integer
    -completedAt: LocalDateTime
    +isDone(): boolean
    +markDone(): void
    +markUndone(): void
    +hasWeightage(): boolean
    +getWeightage(): Integer
    +setWeightage(): void
    +calculatePriorityScore(): int
    +encode(): String
    #{abstract} getTypeCode(): char
}

class Todo {
    #getTypeCode(): char
}

class Deadline {
    -by: LocalDateTime
    +getBy(): LocalDateTime
    #getTypeCode(): char
    +calculatePriorityScore(): int
}

SemesterBook "1" *--> "0..*" Semester
Semester "1" *--> "1" ModuleBook
ModuleBook "1" *--> "0..*" Module
Module "1" *--> "1" TaskList
TaskList "1" *--> "0..*" Task
Task <|-- Todo
Task <|-- Deadline

@enduml
